# ccc

./: .gitignore  Cargo.toml  README.md  input  input.txt  test.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
example/: test.sofa
src/: ast.rs  cli.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  ty.rs
tests/: testcases.rs
tests/tools/: mod.rs
