[package]
name = "sofa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
# libc = "0.2"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
#     "llvm14-0",
# ] }
# smallvec = "1.9.0"
# itertools = "0.10.3"
# once_cell = "1.13.1"

[dev-dependencies]
rand = "0.8.5"